[package]
name = "dotfileutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
env_logger = "0.9.0"
log = "0.4.14"
once_cell = "1.8.0"
structopt = "0.3.25"
tokio = "1.12.0"
walkdir = "2.3.2"

[dev-dependencies]
tempfile = "3.2.0"
ctor = "0.1.21"
