[package]
name = "dotfileutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
cmd_lib = "1.3.0"
cmd_lib_core = "0.4.0"
console = "0.15.0"
crossbeam = "0.8.1"
directories = "4.0.1"
env_logger = "0.9.0"
git2 = "0.14.2"
log = "0.4.14"
notify = "4.0.17"
once_cell = "1.8.0"
structopt = "0.3.25"
tokio = "1.12.0"
walkdir = "2.3.2"
which = "4.2.2"

[dev-dependencies]
tempfile = "3.2.0"
ctor = "0.1.21"
